_docs/v0.62/embedding/sdk/api/snippets/DrillThroughQuestionProps.md
---
version: v0.62
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: DrillThroughQuestionProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/DrillThroughQuestionProps.md'
layout: new-docs
---

**`Expand`**

Props for the drill-through question

## Properties

<!-- [<snippet properties>] -->

| Property                                                    | Type                                                                                                                                                                                                                                    | Description                                                                                                                                                                                                                                                                                                                                                                                                 |
| :---------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="children"></a> `children?`                           | [`ReactNode`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L478)                                                                                             | The children of the component                                                                                                                                                                                                                                                                                                                                                                               |
| <a id="classname"></a> `className?`                         | `string`                                                                                                                                                                                                                                | A custom class name to be added to the root element.                                                                                                                                                                                                                                                                                                                                                        |
| <a id="datapicker"></a> `dataPicker?`                       | [`EmbeddingDataPicker`](./api/EmbeddingDataPicker)                                                                                                                                                                                   | Controls the menu for selecting data sources in questions. You can opt for the full data picker by setting `dataPicker = "staged"`.                                                                                                                                                                                                                                                                         |
| <a id="entitytypes"></a> `entityTypes?`                     | [`EmbeddingEntityType`](./api/EmbeddingEntityType)[]                                                                                                                                                                                 | An array that specifies which entity types are available in the data picker                                                                                                                                                                                                                                                                                                                                 |
| <a id="height"></a> `height?`                               | `Height`\<`string` \| `number`\>                                                                                                                                                                                                        | A number or string specifying a CSS size value that specifies the height of the component                                                                                                                                                                                                                                                                                                                   |
| <a id="initialcollection"></a> `initialCollection?`         | [`SdkCollectionId`](./api/SdkCollectionId)                                                                                                                                                                                           | The collection to preselect in the save modal's collection picker. Unlike `targetCollection`, the picker remains visible and the user can choose a different collection. Ignored when `targetCollection` is set.                                                                                                                                                                                            |
| <a id="initialsqlparameters"></a> `initialSqlParameters?`   | [`SqlParameterValues`](./api/SqlParameterValues)                                                                                                                                                                                     | Initial values for SQL parameters, slug-keyed. Applied once on mount; user widget edits afterwards are not reflected back to the host. <br/> For each parameter: <br/> - set to a value: that value is applied. <br/> - set to `null`: strictly cleared, ignoring the parameter's default. <br/> - omitted (or set to `undefined`): falls back to the parameter's default (or `null` if it has no default). |
| <a id="issaveenabled"></a> `isSaveEnabled?`                 | `boolean`                                                                                                                                                                                                                               | Whether to show the save button.                                                                                                                                                                                                                                                                                                                                                                            |
| <a id="onbeforesave"></a> `onBeforeSave?`                   | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion) \| `undefined`, `context`: \{ `isNewQuestion`: `boolean`; \}) => [`Promise`](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Promise)\<`void`\> | A callback function that triggers before saving. Only relevant when `isSaveEnabled = true`                                                                                                                                                                                                                                                                                                                  |
| <a id="onrun"></a> `onRun?`                                 | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion) \| `undefined`) => `void`                                                                                                                                                  | A callback function that triggers when a question is updated, including when a user clicks the `Visualize` button in the question editor                                                                                                                                                                                                                                                                    |
| <a id="onsave"></a> `onSave?`                               | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion), `context`: \{ `dashboardTabId?`: `number`; `isNewQuestion`: `boolean`; \}) => `void`                                                                                      | A callback function that triggers when a user saves the question. Only relevant when `isSaveEnabled = true`                                                                                                                                                                                                                                                                                                 |
| <a id="plugins"></a> `plugins?`                             | [`MetabasePluginsConfig`](./api/MetabasePluginsConfig)                                                                                                                                                                               | -                                                                                                                                                                                                                                                                                                                                                                                                           |
| <a id="style"></a> `style?`                                 | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579)                                                                                        | A custom style object to be added to the root element.                                                                                                                                                                                                                                                                                                                                                      |
| <a id="targetcollection"></a> `targetCollection?`           | [`SdkCollectionId`](./api/SdkCollectionId)                                                                                                                                                                                           | The collection to save the question to. This will hide the collection picker from the save modal. Only applicable to interactive questions.                                                                                                                                                                                                                                                                 |
| <a id="title"></a> `title?`                                 | [`SdkQuestionTitleProps`](./api/SdkQuestionTitleProps)                                                                                                                                                                               | Determines whether the question title is displayed, and allows a custom title to be displayed instead of the default question title. Shown by default.                                                                                                                                                                                                                                                      |
| <a id="width"></a> `width?`                                 | `Width`\<`string` \| `number`\>                                                                                                                                                                                                         | A number or string specifying a CSS size value that specifies the width of the component                                                                                                                                                                                                                                                                                                                    |
| <a id="withalerts"></a> `withAlerts?`                       | `boolean`                                                                                                                                                                                                                               | Enables the ability to set up alerts on the question.                                                                                                                                                                                                                                                                                                                                                       |
| <a id="withcharttypeselector"></a> `withChartTypeSelector?` | `boolean`                                                                                                                                                                                                                               | Determines whether the chart type selector and corresponding settings button are shown. Only relevant when using the default layout.                                                                                                                                                                                                                                                                        |
| <a id="withdownloads"></a> `withDownloads?`                 | `boolean`                                                                                                                                                                                                                               | Enables the ability to download results in the question.                                                                                                                                                                                                                                                                                                                                                    |
| <a id="witheditorbutton"></a> `withEditorButton?`           | `boolean`                                                                                                                                                                                                                               | Determines whether the editor button is shown. Only relevant when using the default layout.                                                                                                                                                                                                                                                                                                                 |

<!-- [<endsnippet properties>] -->
